feat: frontend project structure. feat: backend code cleaned and simplified fot controllers and services.